# livekit-mcp-client

./: .env.example  .gitignore  .safety-project.ini  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
examples/jira_agent_stdio/: .env.example  main.py  requirements.txt
src/livekit-mcp-client_redtius/: __init__.py  exceptions.py  mcpclient.py  requirements.txt  types.py  utils.py
src/livekit_mcp_client/: __init__.py  exceptions.py  types.py  utils.py
src/livekit_mcp_client/clients/: mcpcallable.py  mcpclient.py  schema.py  schemav3.py
src/livekit_mcp_client/connectors/: base.py  sse.py  stdio.py
src/livekit_mcp_client/llm/: llm.py
tests/: base_test.py  conftest.py  connectors_test.py  mcpclient_test.py  schema_test.py
